--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,19 @@
 site_name: Dev Blogs
+site_url: https://www.gauravsood.me/dev-blogs
+site_author: Gaurav Sood
+site_description: >-
+  Dev Blogs documenting my learning about development and technology
 
-theme: cinder
+
+theme:
+  name: material
+
 nav:
 - Home: index.md
 - Unix:
   - ssh-access: unix/Accessing-Remote-Machines-Using-SSH.md
 
 plugins:
-    - search
+  - search
+  - minify:
+      minify_html: true
